--- a/ArduinoCode/Makefile
+++ b/ArduinoCode/Makefile
@@ -1,8 +1,8 @@
-sim: build
-	C:\Users\Asus\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
+sim: build 
+	C:\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
 
 build:
 	pio run
 
 sim_raw:
-	C:\Users\Asus\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
+	C:\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
