--- a/Board/.gitignore
+++ b/Board/.gitignore
@@ -1,6 +1,6 @@
-main/src/3d/board_3d.m3d.bak
-main/src/3d/board_3d_build.m3d.a3d.bak
+main/src/3d/mainboard_3d.m3d.bak
+main/src/3d/robot_3d_build.m3d.a3d.bak
 main/src/3d/motor_bracing.m3d.bak
 
-v2/board_3d.m3d.bak
+v2/board_v2_3d.m3d.bak
 
