added timer interrupt fo tick devices

--- a/ArduinoCode/Makefile
+++ b/ArduinoCode/Makefile
@@ -1,8 +1,8 @@
-simulation: build
-	C:\Users\Asus\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
+sim: build
+	C:\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
 
 build:
 	pio run
 
-simulation_raw:
-	C:\Users\Asus\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elfma
+sim_raw:
+	C:\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elfma
