--- a/ArduinoCode/Makefile
+++ b/ArduinoCode/Makefile
@@ -1,5 +1,5 @@
 sim: build
-	C:\Users\Asus\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
+	C:\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
 
 build:
 	pio run
