написал repeatActionHandler, ExitHandler не работает

--- a/ArduinoCode/Makefile
+++ b/ArduinoCode/Makefile
@@ -1,8 +1,14 @@
-sim: build
+sim_max: build
 	C:\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
 
 build:
 	pio run
 
-sim_raw:
+sim_raw_max:
 	C:\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elfma
+
+sim_andrey: build
+	C:\Users\Asus\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
+
+sim_raw_andrey:
+	C:\Users\Asus\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
