--- a/ArduinoCode/platformio.ini
+++ b/ArduinoCode/platformio.ini
@@ -13,5 +13,7 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 monitor_speed = 115200
-
 platform_packages = platformio/tool-simavr
+lib_deps = 
+	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
+	jrowberg/I2Cdevlib-MPU6050@^1.0.0
