added for maks simavr

--- a/ArduinoCode/platformio.ini
+++ b/ArduinoCode/platformio.ini
@@ -14,6 +14,8 @@ board = nanoatmega328
 framework = arduino
 monitor_speed = 115200
 platform_packages = platformio/tool-simavr
+test_testing_command =
+  ${platformio.packages_dir}/tool-simavr/bin/simavr -m atmega328p -f 16000000L ${platformio.build_dir}/${this.__env__}/firmware.elf
 lib_deps = Wire
 	; mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
 	; jrowberg/I2Cdevlib-MPU6050@^1.0.0
