--- a/ArduinoCode/Makefile
+++ b/ArduinoCode/Makefile
@@ -1,11 +1,12 @@
 build:
 	pio run
-	
+
+# кошкомальчик на arch	
 sim_max: build
-	C:\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
+	simavr -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
 
 sim_raw_max:
-	C:\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elfma
+	simavr -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elfma
 
 sim_andrey: build
 	C:\Users\Asus\.platformio\packages\tool-simavr\bin\simavr.exe -m atmega328p -f 16000000 .pio/build/nanoatmega328/firmware.elf
